test/data/syntax-errors/invalid-list-expression-combination.jen
hello := 5
there := hello 2
